k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: dotnet9-app
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 422600867425.dkr.ecr.us-east-1.amazonaws.com/backend-repository-dotnet9:latest
        ports:
        - containerPort: 8080
